--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,7 @@
               
               <form action="/">
                 <input type="number" id="quantity" name="quantity" min="1000" max="9999">
+                <img src="./assets/images/question.png" alt="qureston">
               </form>
           </div>
 
